tests/baselines/reference/project/cantFindTheModule/node/cantFindTheModule.errors.txt
decl.ts(1,26): error TS2792: Cannot find module './foo/bar.tx'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
decl.ts(2,26): error TS2792: Cannot find module 'baz'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
decl.ts(3,26): error TS2792: Cannot find module './baz'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== decl.ts (3 errors) ====
    import modErr  = require("./foo/bar.tx");
                             ~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './foo/bar.tx'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import modErr1 = require("baz");
                             ~~~~~
!!! error TS2792: Cannot find module 'baz'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import modErr2 = require("./baz");
                             ~~~~~~~
!!! error TS2792: Cannot find module './baz'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
    //import modErr1 = require("\bar");
    
    //import mod  = require("./foo/bar");
    //import mod1 = require("../module paths/foo/bar");
    //import mod2 = require("foo/bar");
    
    